[package]
name = "radium-launcher"
version = "3.5.4"
description = "Radium — Custom Rec Room Private Server Launcher"
authors = ["abod124-sudo"]
edition = "2021"

[lib]
name = "radium_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
regex = "1"
futures-util = "0.3"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
